Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_ACV__c.field-meta.xml
<CustomField>
    <fullName>Account_ACV__c</fullName>
    <label>Account ACV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>