Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Account_Billing_Address__c</fullName>
    <formula>Bill_To_Account__r.BillingStreet +BR()+
 Bill_To_Account__r.BillingCity   +BR()+
 Bill_To_Account__r.BillingState  +BR()+
 Bill_To_Account__r.BillingPostalCode +BR()+
 Bill_To_Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Billing Address</label>
    <type>Text</type>
</CustomField>