Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_country__c.field-meta.xml
<CustomField>
    <fullName>Account_country__c</fullName>
    <formula>SBQQ__Account__r.BillingCountry</formula>
    <label>Account_country</label>
    <type>Text</type>
</CustomField>