Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Master_Terms_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Master_Terms_Contract_Number__c</fullName>
    <description>Created as part of BIZ-51704</description>
    <formula>SBQQ__Account__r.Master_Terms_Contract_Number__r.ContractNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Master Terms Contract Number</label>
    <type>Text</type>
</CustomField>