Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Notes__c</fullName>
    <label>Account Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>