Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/ACV_Type__c.field-meta.xml
<CustomField>
    <fullName>ACV_Type__c</fullName>
    <description>Built according to user story BIZ-45119</description>
    <label>ACV Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ACV_Type</valueSetName>
    </valueSet>
</CustomField>