Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Approver_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes8yw0</relationshipName>
    <type>Lookup</type>
</CustomField>