Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Approver_3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes9IkF</relationshipName>
    <type>Lookup</type>
</CustomField>