Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Approver_5__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIZ-70329 - To assign additional approvers whose approval is required before the quote is fully approved.</description>
    <label>Additional Approver 5</label>
    <referenceTo>User</referenceTo>
    <relationshipName>QuotesoWMs</relationshipName>
    <type>Lookup</type>
</CustomField>