Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Approver_Group__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_Group__c</fullName>
    <description>Approver group for the special approver functionality</description>
    <label>Additional Approver Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Controller</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Services Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>