Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_Contact__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Additional Contact)</relationshipLabel>
    <relationshipName>Quotes3</relationshipName>
    <type>Lookup</type>
</CustomField>