Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Additional_emails_to_send__c.field-meta.xml
<CustomField>
    <fullName>Additional_emails_to_send__c</fullName>
    <description>custom field to enter additional recipients of the Invoice document - BIZ-48610</description>
    <label>Additional Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>