Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Advanced_Intake_Products__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Intake_Products__c</fullName>
    <label>Advanced Intake Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>equals</operation>
        <value>PIN-00435,PIN-00595,PIN-00789,PIN-00882,PIN-00886,PIN-00951,PIN-01024,PIN-01079</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>