Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/after_hours_work_price_for_quote_terms__c.field-meta.xml
<CustomField>
    <fullName>after_hours_work_price_for_quote_terms__c</fullName>
    <label>after hours work price for quote terms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>