Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Agreed_To_By_Label__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_By_Label__c</fullName>
    <formula>IF(
  OR(
    Text(Contract_Master_Terms__c) = &quot;Reseller&quot;,
    CONTAINS(OP4I_Sales_Segment__c, &quot;Partner Reseller Channel&quot;)
  ),
  Bill_To_Account_Name__c,
  Ship_To_Account__r.Name
)</formula>
    <label>Agreed To By Label</label>
    <type>Text</type>
</CustomField>