Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_Count__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amendment Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>