Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_Quote__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>BIZ-67524 - To store old amendment quotes after date change</description>
    <label>Amendment Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Quotes (Amendment Quote)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>