Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Amendment_Version__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Version__c</fullName>
    <description>Custom field to depict the amendment version built as per BIZ-53348</description>
    <inlineHelpText>Please select an amendment version number to be displayed in the OSA Document Header.</inlineHelpText>
    <label>Amendment Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
                <default>true</default>
                <label>First</label>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Fifth</fullName>
            </value>
            <value>
                <fullName>Sixth</fullName>
            </value>
            <value>
                <fullName>Seventh</fullName>
            </value>
            <value>
                <fullName>Eighth</fullName>
            </value>
            <value>
                <fullName>Ninth</fullName>
            </value>
            <value>
                <fullName>Tenth</fullName>
            </value>
            <value>
                <fullName>Eleventh</fullName>
            </value>
            <value>
                <fullName>Twelfth</fullName>
            </value>
            <value>
                <fullName>Thirteenth</fullName>
            </value>
            <value>
                <fullName>Fourteenth</fullName>
            </value>
            <value>
                <fullName>Fifteenth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>