Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Annualized_First_Year_Software_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Annualized_First_Year_Software_Net_Total__c</fullName>
    <formula>if(First_Segment_Months__c != 12,
((Second_Year_Software_Total__c - ((First_Year_Software_Net_Total__c / First_Segment_Months__c) * 12)) / ((First_Year_Software_Net_Total__c / First_Segment_Months__c) * 12)),
((Second_Year_Software_Total__c - First_Year_Software_Total__c) / First_Year_Software_Total__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annualized First Year Software Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>