Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_check_approval_level__c.field-meta.xml
<CustomField>
    <fullName>Approval_check_approval_level__c</fullName>
    <description>Created as part of Story : BIZ-50590
Created to include service non standard and products</description>
    <formula>MAX(InitialTermapproverLevel__c,Free_month_approver_Level__c,Payment_Term_Approver_Level__c,Billing_Frequency_approval_level__c,Minimum_year_approver_level__c,SFA_Level__c,Non_standard_Level__c,Product_level__c,	Fr_maximum_service_Level__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval check approval level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>