Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <description>Updated via flow the highest approval level</description>
    <label>Approval Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>