Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Approval_Level_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Name__c</fullName>
    <description>Field to store the name of the field that has highest approval level BIZ-46142</description>
    <label>Approval Level Name</label>
    <length>244</length>
    <type>Text</type>
</CustomField>