Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Associated_prime_product__c.field-meta.xml
<CustomField>
    <fullName>Associated_prime_product__c</fullName>
    <description>Created as a part of story BIZ-49977
To differentiate if a quote has a prime product or not</description>
    <formula>IF(Sixth_Year_Software_Net_Total__c&gt;0, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated prime product</label>
    <type>Checkbox</type>
</CustomField>