Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Band__c.field-meta.xml
<CustomField>
    <fullName>Band__c</fullName>
    <formula>IF(
  OR(
    ISPICKVAL(License_Basis__c,&quot;Attorneys&quot;),
    ISPICKVAL(License_Basis__c,&quot;Lawyers&quot;)
  ),
  SBQQ__Account__r.License_Band__c,
  IF(
    ISPICKVAL(License_Basis__c,&quot;Fee Earners&quot;),
    SBQQ__Account__r.License_Band_Timekeepers__c,
    0
  )
)</formula>
    <label>Band</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>