Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Band_Override__c.field-meta.xml
<CustomField>
    <fullName>Band_Override__c</fullName>
    <description>For the use of contract Ops team in case of exceptions</description>
    <label>Band Override</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>