Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures Valid billing account</description>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Bill To Account)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>