Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Account_Name__c</fullName>
    <description>BIZ-66911 - Created this field to be used in the body of Quote Term QT-4969</description>
    <formula>Bill_To_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Account Name</label>
    <type>Text</type>
</CustomField>