Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures Bill To address</description>
    <label>Bill To Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Address__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_To_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>