Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Bill_To_Address_Label__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Address_Label__c</fullName>
    <formula>IF(
  OR(
    Text(Contract_Master_Terms__c) = &quot;Reseller&quot;,
    CONTAINS(OP4I_Sales_Segment__c, &quot;Partner Reseller Channel&quot;)
  ),
  &quot;Reseller Partner:&quot;,
  &quot;Bill To:&quot;
)</formula>
    <label>Bill To Address Label</label>
    <type>Text</type>
</CustomField>