Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Text__c</fullName>
    <description>Created as part of BIZ-53454</description>
    <formula>IF(ISBLANK(SBQQ__BillingStreet__c), &quot;&quot;, SBQQ__BillingStreet__c &amp; BR()) &amp;
IF(ISBLANK(SBQQ__BillingCity__c), &quot;&quot;, SBQQ__BillingCity__c &amp; &quot;, &quot;) &amp;
IF(ISBLANK(SBQQ__BillingState__c), &quot;&quot;, SBQQ__BillingState__c &amp; &quot; &quot;) &amp;
IF(ISBLANK(SBQQ__BillingPostalCode__c), &quot;&quot;, SBQQ__BillingPostalCode__c &amp; BR()) &amp;
IF(ISBLANK(SBQQ__BillingCountry__c), &quot;&quot;, SBQQ__BillingCountry__c)</formula>
    <label>Billing Address Text</label>
    <type>Text</type>
</CustomField>