Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Frequency_approval_level__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_approval_level__c</fullName>
    <description>Created for approval process to include renewal billing frequency field as well</description>
    <formula>Combined_billing_frequency_level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Frequency level(Exception)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>