Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Frequency_Text__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency_Text__c</fullName>
    <description>Text field stamped whenever the billing frequency field is updated.</description>
    <label>Billing Frequency Text</label>
    <length>65</length>
    <type>Text</type>
</CustomField>