Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Instructions__c</fullName>
    <description>BIZ-50618</description>
    <label>Billing Instructions</label>
    <type>TextArea</type>
</CustomField>