Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <description>Notes related to billing information for the quote. Created as part of BIZ-73881.</description>
    <label>Billing Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>