Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Billing_Restriction__c</fullName>
    <description>It has value RED/ Yellow/ Yellow- Green. BIZ-47719</description>
    <inlineHelpText>Billing Address is in a Restricted Country and it requires Contract Ops governance.</inlineHelpText>
    <label>Billing Restriction</label>
    <length>15</length>
    <type>Text</type>
</CustomField>