Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Billing_Schedule_Exception_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule_Exception_Line_Count__c</fullName>
    <label>Billing Schedule Exception Line Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>