Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/boomi__c.field-meta.xml
<CustomField>
    <fullName>boomi__c</fullName>
    <label>boomi</label>
    <length>255</length>
    <type>Text</type>
</CustomField>