Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Boomi_T_Cs__c.field-meta.xml
<CustomField>
    <fullName>Boomi_T_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boomi T&amp;Cs</label>
    <type>Checkbox</type>
</CustomField>