Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Cancellation_fee__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_fee__c</fullName>
    <description>Custom field built according to US# BIZ-47145 label changed according to BIZ-48306</description>
    <label>Multi-year Cancellation fee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancellation_fee</valueSetName>
    </valueSet>
</CustomField>