Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Cancellation_terms__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_terms__c</fullName>
    <label>Supersession Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APS_and_Intapp_entity_for_DTE_product</fullName>
                <label>APS and Intapp  (entity for DTE product)</label>
            </value>
            <value>
                <fullName>APS Cancellation with outstanding fees (entity for DTE product)</fullName>
            </value>
            <value>
                <fullName>APS Only</fullName>
            </value>
            <value>
                <fullName>Break Bundle + Sign Contemporaneously</fullName>
            </value>
            <value>
                <fullName>Break Bundle + Sign Contemporaneously + Keep MSSA</fullName>
            </value>
            <value>
                <fullName>Full OSA Supersession</fullName>
            </value>
            <value>
                <fullName>Gwabbit</fullName>
            </value>
            <value>
                <fullName>Intapp and APS Upgrades/Conversions keeping Master t&amp;c’s in place (entity for DTE product)</fullName>
            </value>
            <value>
                <fullName>Intapp Cancellation with Outstanding Fees</fullName>
            </value>
            <value>
                <fullName>Intapp Only Upgrades/Conversions keeping Master t&amp;c’s in place</fullName>
                <isActive>false</isActive>
                <label>Intapp Only Upgrades/Conversions keeping Master t&amp;c’s in place</label>
            </value>
            <value>
                <fullName>Intapp OSA, Keeping MSSA</fullName>
                <label>Intapp OSA, Keeping MSSA DealCloud Paper</label>
            </value>
            <value>
                <fullName>One Place</fullName>
            </value>
            <value>
                <fullName>OP Legacy OF cancels other OP OF</fullName>
            </value>
            <value>
                <fullName>Partial OSA Supersession_Software</fullName>
            </value>
            <value>
                <fullName>Partial OSA Supersession_Software_keep MSSA</fullName>
            </value>
            <value>
                <fullName>Rekoop</fullName>
            </value>
            <value>
                <fullName>Supersede DC Subscription</fullName>
            </value>
            <value>
                <fullName>Supersede OSA_keep MSSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>