Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>BIZ-51810:display opportunity status</description>
    <formula>SBQQ__Opportunity2__r.Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>