Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/CheckMasterTerms_Legacy_DC_AgreementIPA__c.field-meta.xml
<CustomField>
    <fullName>CheckMasterTerms_Legacy_DC_AgreementIPA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckMasterTerms Legacy DC AgreementIPA</label>
    <type>Checkbox</type>
</CustomField>