Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Cloud_Addendum__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Addendum__c</fullName>
    <formula>IF(omit_cloud_add_attachment__c=True, False ,
 OR(IF(ISPICKVAL( Contract_Master_Terms__c ,&apos;Existing Terms Cloud&apos;),True,False),
IF(ISPICKVAL( Contract_Master_Terms__c ,&apos;Existing Intapp MSSA plus Cloud and Annex&apos;),True,False)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cloud Addendum</label>
    <type>Checkbox</type>
</CustomField>