Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Cloud_Addendum_Document_Attached__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Addendum_Document_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cloud Addendum Document attachment acknowledgment checkbox</description>
    <inlineHelpText>I acknowledge that Cloud Addendum document has been attached to the Quote</inlineHelpText>
    <label>Cloud Addendum Document Attached</label>
    <type>Checkbox</type>
</CustomField>