Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Combinepaymentterm__c.field-meta.xml
<CustomField>
    <fullName>Combinepaymentterm__c</fullName>
    <description>Created for story 51607</description>
    <label>Combinepaymentterm</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>