Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Complex_Approval_Condition_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Complex_Approval_Condition_Evaluation__c</fullName>
    <label>Complex Approval Condition Evaluation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>