Doc/force-app/main/default/objects/SBQQ__Quote__c/fields/Contract_Master_Terms__c.field-meta.xml
<CustomField>
    <fullName>Contract_Master_Terms__c</fullName>
    <label>Contract Master Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>URL Terms</fullName>
            </value>
            <value>
                <fullName>Existing Terms Cloud</fullName>
                <label>Existing Intapp MSSA Plus Cloud</label>
            </value>
            <value>
                <fullName>Existing Terms</fullName>
                <label>Existing Intapp MSSA Terms</label>
            </value>
            <value>
                <fullName>Existing Terms with Annex</fullName>
                <label>Existing Intapp MSSA plus Annex</label>
            </value>
            <value>
                <fullName>MSSA Attached</fullName>
                <label>New Intapp MSSA Attached</label>
            </value>
            <value>
                <fullName>Training</fullName>
                <label>Intapp Partner and Training</label>
            </value>
            <value>
                <fullName>OnePlace Legacy</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
            <value>
                <fullName>Custom Master Term from Account</fullName>
            </value>
            <value>
                <fullName>Repstor Legacy Agreement Attached</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
                <label>Intapp Reseller</label>
            </value>
            <value>
                <fullName>Repstor G-Cloud</fullName>
            </value>
            <value>
                <fullName>Existing Intapp MSSA signed by Customer Affiliate</fullName>
            </value>
            <value>
                <fullName>Legacy DealCloud Agreement</fullName>
            </value>
            <value>
                <fullName>New MSSA Signed Separate</fullName>
            </value>
            <value>
                <fullName>Prime</fullName>
                <label>Partner and Prime</label>
            </value>
            <value>
                <fullName>Repstor Legacy Term</fullName>
            </value>
            <value>
                <fullName>Existing Intapp MSSA plus Cloud and Annex</fullName>
            </value>
            <value>
                <fullName>Repstor Retro-Booking</fullName>
            </value>
            <value>
                <fullName>Repstor Legacy</fullName>
            </value>
            <value>
                <fullName>Legacy DealCloud Agreement Plus IPA</fullName>
            </value>
            <value>
                <fullName>TermSheet</fullName>
            </value>
            <value>
                <fullName>Existing Terms Plus Prime</fullName>
                <isActive>false</isActive>
                <label>Existing Terms Plus Prime</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>